# weather-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: config.py  logger.py  server.py
src/clients/: weather_client.py
src/models/: weather_model.py
src/services/: weather_service.py
src/tools/: weather.py
src/utils/: helpers.py
tests/: test_weather.py
